--- a/src/Propose.Frontend/index.html
+++ b/src/Propose.Frontend/index.html
@@ -24,6 +24,8 @@
     <ce-app></ce-app>
     <ce-footer></ce-footer>
 
+    <!--<ce-link-master-detail-embed></ce-link-master-detail-embed>-->
+
     <script src="lib/quill.min.js"></script>
     <script src="lib/moment.min.js"></script>
     <script src="lib/rome.min.js"></script>
